Kubernetes and VMs Multi-Cluster Metrics & Logging With Prometheus, Thanos and Loki/monitoring/thanos/query-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query
spec:
  rules:
  - host: thanos-query.6jxlxp1tuuo9z4crirpd.apps.eu-hlski.klusternetes.com
    http:
      paths:
      - backend:
         service:
           name: thanos-query
           port:
             number: 9090
        path: /
        pathType: Prefix
