Kubernetes and VMs Multi-Cluster Metrics & Logging With Prometheus, Thanos and Loki/monitoring/thanos/receiver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-receive
spec:
  ingressClassName: nginx
  rules:
  - host: thanos-receive.6jxlxp1tuuo9z4crirpd.apps.eu-hlski.klusternetes.com
    http:
      paths:
      - backend:
          serviceName: thanos-receive
          servicePort: remote
        path: /api/v1/receive
        pathType: ImplementationSpecific
      - backend:
          serviceName: thanos-receive
          servicePort: http
        path: /
        pathType: ImplementationSpecific
